--- a/VaR.ipynb
+++ b/VaR.ipynb
@@ -102,6 +102,7 @@
       },
       "source": [
         "# here we use the USD YEN exchange rate as an example\n",
+        "# Data is downloaded from https://www.macrotrends.net/2550/dollar-yen-exchange-rate-historical-chart\n",
         "data = pd.read_csv(\"dollar-yen-exchange-rate-historical-chart.csv\", header = 8) "
       ],
       "execution_count": 0,
@@ -476,7 +477,7 @@
       },
       "source": [
         "Value-at-Risk backtesting:\n",
-        "here the binomial one tailed test is used"
+        "here the binomial one-tailed test is used"
       ]
     },
     {
